--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="assets/lib/angular-deckgrid/angular-deckgrid.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!--<script src="cordova.js"></script>-->
 
     <!-- your app's js -->
     <script src="app/app.module.js"></script>
